BS-App2/Yaml/svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: app2
    name: app2
    namespace: default
spec:
  ports:
   - port: 3000
     targetPort: 3000
  selector:
    app: app2
